@@ -34,14 +34,6 @@
 
   <properties>
     <relative.path.to.eng.folder>../..</relative.path.to.eng.folder>
-    <test.dir>src/test/java</test.dir>
-    <jacoco.min.branchcoverage>0.01</jacoco.min.branchcoverage>
-    <jacoco.min.linecoverage>0.01</jacoco.min.linecoverage>
-    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
-    <javaModulesSurefireArgLine>
-      --add-exports com.azure.core.test.perf/com.azure.perf.test.core=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
-
   </properties>
 
   <build>
@@ -60,6 +52,7 @@
                 <include>com.beust:jcommander:[1.78]</include> <!-- {x-include-update;com.beust:jcommander;external_dependency} -->
 
                 <include>io.projectreactor:reactor-core:[3.4.34]</include> <!-- {x-include-update;io.projectreactor:reactor-core;external_dependency} -->
+                <include>io.vertx:vertx-codegen:[4.5.0]</include> <!-- {x-include-update;io.vertx:vertx-codegen;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
@@ -90,22 +83,20 @@
       <version>1.11.17</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
     </dependency>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-api;external_dependency} -->
-      <scope>test</scope>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core-http-jdk-httpclient</artifactId>
+      <version>1.0.0-beta.9</version> <!-- {x-version-update;com.azure:azure-core-http-jdk-httpclient;dependency} -->
     </dependency>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-engine;external_dependency} -->
-      <scope>test</scope>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core-http-vertx</artifactId>
+      <version>1.0.0-beta.14</version> <!-- {x-version-update;com.azure:azure-core-http-vertx;dependency} -->
     </dependency>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-params</artifactId>
-      <version>5.9.3</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
-      <scope>test</scope>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-codegen</artifactId>
+      <version>4.5.0</version> <!-- {x-version-update;io.vertx:vertx-codegen;external_dependency} -->
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
